@@ -32,7 +32,7 @@ plugins {
 }
 
 tasks.named("wrapper") {
-    gradleVersion = '8.1.1'
+    gradleVersion = '8.2.1'
     distributionType = Wrapper.DistributionType.BIN
 }
 
@@ -77,6 +77,7 @@ allprojects {
 
             doFirst {
                 systemProperty 'java.io.tmpdir', buildDir.absolutePath
+                jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
             }
         }
     }
@@ -270,8 +271,9 @@ allprojects {
     dependencies {
         // Test utilities
         testImplementation "org.assertj:assertj-core:$assertjVersion"
-        testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5Version"
+        testImplementation "org.junit.jupiter:junit-jupiter:$junit5Version"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit5Version"
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 }
 
